fix background fps syncing + use Math.clamp